# bitbucket-server-mcp

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/bitbucket_mcp/: client.py  fields.py
src/bitbucket_mcp/tools/: search.py
tests/: test_client.py  test_search.py  test_validation.py
