[project]
name = "bitbucket-mcp"
version = "1.0.0"
description = "MCP server for Atlassian Bitbucket Server (Enterprise) REST API"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.6.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[project.scripts]
bitbucket-mcp = "bitbucket_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bitbucket_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
