[project]
name = "bitbucket-mcp"
version = "1.3.1"
description = "MCP server for Atlassian Bitbucket Server (Enterprise) REST API"
license = "MIT"
requires-python = ">=3.10"
readme = "README.md"
authors = [
    { name = "Manpreet Shuan" },
]
keywords = ["mcp", "bitbucket", "bitbucket-server", "model-context-protocol", "llm", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]>=1.6.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/ManpreetShuann/bitbucket-mcp"
Repository = "https://github.com/ManpreetShuann/bitbucket-mcp"
Changelog = "https://github.com/ManpreetShuann/bitbucket-mcp/blob/master/CHANGELOG.md"
Issues = "https://github.com/ManpreetShuann/bitbucket-mcp/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8.0",
]

[project.scripts]
bitbucket-mcp = "bitbucket_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bitbucket_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# --- Python Semantic Release (PSR) ---
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/bitbucket_mcp/__init__.py:__version__"]
branch = "master"
build_command = "python -m build"
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release"
changelog_file = "CHANGELOG.md"
upload_to_pypi = true

[tool.semantic_release.branches.master]
match = "master"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
